--- a/jaggeryapps/dashboard/conf/app_management_integration.json
+++ b/jaggeryapps/dashboard/conf/app_management_integration.json
@@ -2,7 +2,7 @@
   "enabled":true,
   "restAPI": {
     "clientRegistration": {
-      "endpoint": "http://127.0.0.1:9763/api/appm/oauth/v1.0/register",
+      "endpoint": "https://127.0.0.1:9443/api/appm/oauth/v1.0/register",
       "username": "admin",
       "password": "admin",
       "clientName": "app-management",
@@ -13,7 +13,7 @@
       "callbackUrl": "http://localhost:8080/app-management-client"
     },
     "publisher": {
-      "endpoint": "http://localhost:9763/api/appm/publisher/v1.1/"
+      "endpoint": "https://localhost:9443/api/appm/publisher/v1.1/"
     }
   }
 }
