--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -65,8 +65,39 @@
         {
              "url": "/serviceproviders/downloadmetadata",
              "path": "/serviceproviders/downloadmetadata.jag"
+        },
+        {
+             "url": "/directories",
+             "path": "/directories/list.jag"
+        },
+        {
+             "url": "/directories/download",
+             "path": "/directories/download.jag"
+        },
+        {
+             "url": "/directories/download-finish",
+             "path": "/directories/download-finish.jag"
+        },
+        {
+            "url": "/directories/add",
+            "path": "/directories/add.jag"
+        },
+        {
+            "url": "/directories/add_finish",
+            "path": "/directories/add_finish.jag"
+        },
+        {
+             "url": "/directories/update_finish",
+             "path": "/directories/update_finish.jag"
+        },
+        {
+            "url": "/directories/get-directory-list",
+            "path": "/directories/get-directory-list.jag"
+        },
+        {
+            "url": "/directories/delete_finish",
+            "path": "/directories/delete_finish.jag"
         }
-
 
     ],
     "initScripts": ["app.js"],
