--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -105,7 +105,11 @@
         {
           "url": "/serviceproviders/appmConf/*",
           "path": "/serviceproviders/custom/controllers/configuration/appmConf.jag"
-        }
+        },
+        {
+          "url": "/apps/getRoles/*",
+          "path": "serviceproviders/custom/controllers/custom/getRoles.jag"
+        },
 
     ],
     "initScripts": ["app.js"],
