Custom theme for identity-cloud

--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -109,6 +109,30 @@
         {
           "url": "/apps/getRoles/*",
           "path": "serviceproviders/custom/controllers/custom/getRoles.jag"
+        },
+        {
+          "url": "/customTheme/themeUpload/*",
+          "path": "/customTheme/themeUpload.jag"
+        },
+        {
+          "url": "/customTheme/themeUpload_finish/*",
+          "path": "/customTheme/controllers/themeUpload_finish.jag"
+        },
+        {
+          "url": "/customTheme/themeList/*",
+          "path": "/customTheme/themeList.jag"
+        },
+        {
+          "url": "/customTheme/getThemeList/*",
+          "path": "/customTheme/controllers/getThemeList.jag"
+        },
+        {
+          "url": "/customTheme/deleteTheme/*",
+          "path": "/customTheme/controllers/deleteTheme.jag"
+        },
+        {
+          "url": "/customTheme/themeTypes/*",
+          "path": "/customTheme/controllers/getThemeTypes.jag"
         }
     ],
     "initScripts": ["app.js"],
