Adding new wireframes

--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -133,7 +133,31 @@
         {
           "url": "/customTheme/themeTypes/*",
           "path": "/customTheme/controllers/getThemeTypes.jag"
-        }
+        },
+        {
+           "url": "/app-landing",
+           "path": "/wizards/configure/app-landing.jag"
+        },
+        {
+           "url": "/agentapp",
+           "path": "/wizards/configure/agentapp.jag"
+         },
+         {
+           "url": "/userdirectory-landing",
+            "path": "/wizards/configure/user-directory-landing.jag"
+         },
+         {
+            "url": "/userdirectory-agent",
+            "path": "/wizards/configure/user-directory-agent.jag"
+         },
+         {
+            "url": "/userdirectory-secondtime",
+            "path": "/wizards/configure/user-directory-second-time.jag"
+         },
+         {
+            "url": "/userdirectory-sus",
+            "path": "/wizards/configure/user-directory-sus.jag"
+          }
     ],
     "initScripts": ["app.js"],
     "logLevel": "info"
