remove sample-apps and rename agent verified to download

--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -151,8 +151,8 @@
             "path": "/directories/agent-download.jag"
         },
         {
-            "url": "/directories/verifiedagent",
-            "path": "/directories/verified-agent-download.jag"
+            "url": "/directories/editagent",
+            "path": "/directories/edit-agent-download.jag"
         },
         {
             "url": "/directories/sampleusers",
