adding configure wizard stage1

--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -72,7 +72,7 @@
         },
         {
              "url": "/directories",
-             "path": "/directories/list.jag"
+             "path": "/directories/edit-agent-download.jag"
         },
         {
              "url": "/directories/download",
