--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -135,7 +135,7 @@
           "path": "/customTheme/controllers/getThemeTypes.jag"
         },
         {
-           "url": "/overview/ap-landing",
+           "url": "/overview/landing",
            "path": "/overview/admin-portal-landing.jag"
         },
         {
@@ -159,6 +159,11 @@
             "path": "/directories/sample-users.jag"
         },
         {
+             "url": "/directories/get-sample-user-list",
+             "path": "/directories/get-sample-user-list.jag"
+        },
+
+        {
             "url": "/overview/appoverview",
             "path": "/overview/app-overview.jag"
         },
@@ -174,6 +179,19 @@
             "url": "/serviceproviders/applanding",
             "path": "serviceproviders/application-landing.jag"
          },
+         {
+            "url": "/samples/setup",
+            "path": "samples/setup_finish.jag"
+         },
+         {
+            "url": "/samples/add_sample_users_finish",
+            "path": "samples/add_sample_users_finish.jag"
+         }
+
+
+
+
+
     ],
     "initScripts": ["app.js"],
     "logLevel": "info"
