Add sample setup functionality and change wso2 fonts

--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -99,6 +99,11 @@
             "path": "/directories/get-directory-list.jag"
         },
         {
+            "url": "/directories/get-directory",
+            "path": "/directories/get-directory.jag"
+        },
+
+        {
             "url": "/directories/delete_finish",
             "path": "/directories/delete_finish.jag"
         },
