--- a/jaggeryapps/dashboard/jaggery.conf
+++ b/jaggeryapps/dashboard/jaggery.conf
@@ -155,6 +155,10 @@
             "path": "/directories/edit-agent-download.jag"
         },
         {
+            "url": "/directories/test-connection",
+            "path": "/directories/test-connection.jag"
+        },
+        {
             "url": "/directories/sampleusers",
             "path": "/directories/sample-users.jag"
         },
