--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,62 @@
                 <version>${carbon.kernel.version}</version>
             </dependency>
             <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>${sevlet.api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${commons.lang.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.ws.commons.axiom</groupId>
+                <artifactId>axiom-api</artifactId>
+                <version>${axiom.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <artifactId>opensaml</artifactId>
+                <version>${opensaml.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.wso2.carbon.identity</groupId>
+                <artifactId>org.wso2.carbon.identity.sso.agent</artifactId>
+                <version>${identity.agent.sso.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.wso2.orbit.joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda.wso2.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>${commons-collections.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.santuario</groupId>
+                <artifactId>xmlsec</artifactId>
+                <version>${xmlsec.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <artifactId>xmltooling</artifactId>
+                <version>${xmltooling.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <artifactId>openws</artifactId>
+                <version>${openws.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.wso2.carbon</groupId>
                 <artifactId>org.wso2.carbon.logging</artifactId>
                 <version>${carbon.kernel.version}</version>
@@ -226,6 +282,9 @@
 
     <modules>
         <module>components/org.wso2.carbon.identity.cloud.authenticator.local</module>
+        <module>samples/jdbc-sample-userstore/components/org.wso2.carbon.identity.user.store.jdbc.sample</module>
+        <module>samples/webapps/cafelebens</module>
+        <module>samples/webapps/italiano</module>
     </modules>
 
     <properties>
@@ -250,5 +309,22 @@
         <imp.pkg.version.javax.servlet>[2.6.0, 3.0.0)</imp.pkg.version.javax.servlet>
         <commons-logging.osgi.version.range>[1.2,2.0)</commons-logging.osgi.version.range>
         <commons-lang.wso2.osgi.version.range>[2.6.0,3.0.0)</commons-lang.wso2.osgi.version.range>
+
+        <identity.agent.sso.version>5.1.2</identity.agent.sso.version>
+        <sevlet.api.version>2.5</sevlet.api.version>
+        <axiom.version>1.2.11-wso2v6</axiom.version>
+        <opensaml.version>2.6.4</opensaml.version>
+        <joda.wso2.version>2.8.2.wso2v1</joda.wso2.version>
+        <openws.version>1.5.4</openws.version>
+        <rampart.wso2.version>1.6.1.wso2v22</rampart.wso2.version>
+        <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
+        <jibx.wso2.version>1.2.1.wso2v1</jibx.wso2.version>
+        <jaxb.wso2.version>2.2.5.wso2v1</jaxb.wso2.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <commons-collections.version>3.2.2</commons-collections.version>
+        <osgi.framework.imp.pkg.version.range>[1.7.0, 2.0.0)</osgi.framework.imp.pkg.version.range>
+        <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
+        <xmlsec.version>1.4.4</xmlsec.version>
+        <xmltooling.version>1.3.1</xmltooling.version>
     </properties>
 </project>
