--- a/samples/userstores/jdbc-sample-userstore/components/org.wso2.carbon.identity.user.store.jdbc.sample/pom.xml
+++ b/samples/userstores/jdbc-sample-userstore/components/org.wso2.carbon.identity.user.store.jdbc.sample/pom.xml
@@ -20,10 +20,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.wso2.carbon.identity.userstore.jdbc.sample</groupId>
-        <artifactId>identity-userstore-jdbc-sample</artifactId>
-        <version>${identity.cloud.version}</version>
-        <relativePath>../../pom.xml</relativePath>
+        <groupId>org.wso2.carbon.identity.cloud</groupId>
+        <artifactId>identity-cloud</artifactId>
+        <relativePath>../../../../../pom.xml</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -33,11 +33,6 @@
     <description>WSO2 Carbon JDBC Sample Userstore</description>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.core</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.user.api</artifactId>
@@ -56,20 +51,6 @@
             <artifactId>org.wso2.carbon.logging</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.wso2.carbon.identity.framework</groupId>
-            <artifactId>org.wso2.carbon.identity.core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.wso2.carbon.identity.framework</groupId>
-            <artifactId>org.wso2.carbon.identity.user.store.configuration</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.wso2.carbon.identity.framework</groupId>
-            <artifactId>org.wso2.carbon.identity.application.common</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -91,9 +72,7 @@
                         </Private-Package>
                         <Import-Package>
                             org.wso2.carbon.identity.application.common.*;version="${carbon.identity.framework.imp.pkg.version.range}",
-                            org.wso2.carbon.identity.core.*;version="${carbon.identity.framework.imp.pkg.version.range}",
                         </Import-Package>
-
 
                         <Export-Package>
                             !org.wso2.carbon.identity.user.store.jdbc.sample.internal,
