--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,23 @@
                 <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
                 <version>${carbon.identity.framework.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.wso2.carbon</groupId>
+                <artifactId>org.wso2.carbon.user.api</artifactId>
+                <version>${carbon.kernel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon</groupId>
+                <artifactId>org.wso2.carbon.user.core</artifactId>
+                <version>${carbon.kernel.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.wso2.carbon.identity</groupId>
+                <artifactId>org.wso2.carbon.um.ws.api</artifactId>
+                <version>${um.ws.api.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -282,7 +299,7 @@
 
     <modules>
         <module>components/org.wso2.carbon.identity.cloud.authenticator.local</module>
-        <module>samples/jdbc-sample-userstore/components/org.wso2.carbon.identity.user.store.jdbc.sample</module>
+        <module>samples/userstores/jdbc-sample-userstore/components/org.wso2.carbon.identity.user.store.jdbc.sample</module>
         <module>samples/webapps/cafelebens</module>
         <module>samples/webapps/italiano</module>
     </modules>
@@ -326,5 +343,6 @@
         <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
         <xmlsec.version>1.4.4</xmlsec.version>
         <xmltooling.version>1.3.1</xmltooling.version>
+        <um.ws.api.version>5.1.2</um.ws.api.version>
     </properties>
 </project>
