--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
                 <artifactId>org.wso2.carbon.um.ws.api</artifactId>
                 <version>${um.ws.api.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.tomcat</groupId>
+                <artifactId>tomcat-servlet-api</artifactId>
+                <version>${tomcat-servlet-api.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -299,6 +304,7 @@
 
     <modules>
         <module>components/org.wso2.carbon.identity.cloud.authenticator.local</module>
+        <module>components/org.wso2.carbon.identity.cloud.web.jaggery</module>
         <module>samples/userstores/jdbc-sample-userstore/components/org.wso2.carbon.identity.user.store.jdbc.sample</module>
         <module>samples/webapps/cafelebens</module>
         <module>samples/webapps/italiano</module>
@@ -344,5 +350,6 @@
         <xmlsec.version>1.4.4</xmlsec.version>
         <xmltooling.version>1.3.1</xmltooling.version>
         <um.ws.api.version>5.1.2</um.ws.api.version>
+        <tomcat-servlet-api.version>7.0.70.wso2v1</tomcat-servlet-api.version>
     </properties>
 </project>
