IDNCLOUD-82 : Using select2 component for tag listing.

--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -122,6 +122,10 @@
       "path": "serviceproviders/custom/controllers/custom/getRoles.jag"
     },
     {
+      "url": "/apps/getTags/*",
+      "path": "serviceproviders/custom/controllers/custom/getTags.jag"
+    },
+    {
       "url": "/customTheme/themeUpload/*",
       "path": "/customTheme/themeUpload.jag"
     },
