--- a/samples/webapps/cafelebens/src/main/resources/cafelebens.properties
+++ b/samples/webapps/cafelebens/src/main/resources/cafelebens.properties
@@ -41,14 +41,14 @@ SAML2.AssertionConsumerURL=http://localhost:8080/cafelebens.com/home.jsp
 SAML2.IdPEntityId=localhost
 
 #The URL of the SAML 2.0 Identity Provider
-SAML2.IdPURL=https://localhost:9443/samlsso
+SAML2.IdPURL=https://localhost:9443/identity
 
 #Identifier given for the Service Provider for SAML 2.0 attributes 
 #exchange
 #SAML2.AttributeConsumingServiceIndex=1701087467
 
 #Specify if SingleLogout is enabled/disabled
-SAML2.EnableSLO=true
+SAML2.EnableSLO=false
 
 #This is the URL that is used for SLO
 SAML2.SLOURL=logout
@@ -97,7 +97,7 @@ OpenId.ReturnToURL=http://localhost:8080/cafelebens.com/home.jsp
 #SAML.PostBinding.RequestPage=path/to/the/html
 
 #Additional request parameters
-QueryParams=tenantDomain=-1234
+#QueryParams=tenantDomain=-1234
 
 #SAML2.IsForceAuthn=true
 
