Adding security headers.

--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -210,12 +210,21 @@
     {
       "name": "SessionFilter",
       "class": "org.wso2.carbon.identity.cloud.web.jaggery.SessionFilter"
+    },
+    {
+        "name":"HttpHeaderSecurityFilter",
+        "class":"org.apache.catalina.filters.HttpHeaderSecurityFilter",
+        "params" : [{"name" : "hstsEnabled", "value" : "false"}]
     }
   ],
   "filterMappings": [
     {
       "name": "SessionFilter",
       "url": "/*"
+    },
+    {
+        "name":"HttpHeaderSecurityFilter",
+        "url":"*"
     }
   ],
   "logLevel": "info"
