--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -227,5 +227,11 @@
         "url":"*"
     }
   ],
+  "errorPages": {
+          "500": "/error/error500.html",
+          "401": "/error/error401.html",
+          "403": "/error/error403.html",
+          "404": "/error/error404.html"
+      },
   "logLevel": "info"
 }
