--- a/samples/webapps/cafelebens/src/main/resources/cafelebens.properties
+++ b/samples/webapps/cafelebens/src/main/resources/cafelebens.properties
@@ -32,7 +32,7 @@ OpenIdURL=openid
 SkipURIs=/cafelebens.com/index.jsp
 
 #A unique identifier for this SAML 2.0 Service Provider application
-SAML2.SPEntityId=cafelebens.com
+SAML2.SPEntityId=CafeLebens-Sample
 
 #The URL of the SAML 2.0 Assertion Consumer
 SAML2.AssertionConsumerURL=http://localhost:8080/cafelebens.com/home.jsp
