--- a/samples/webapps/italiano/src/main/resources/italiano.properties
+++ b/samples/webapps/italiano/src/main/resources/italiano.properties
@@ -32,7 +32,7 @@ OpenIdURL=openid
 SkipURIs=/italiano.com/index.jsp
 
 #A unique identifier for this SAML 2.0 Service Provider application
-SAML2.SPEntityId=italiano.com
+SAML2.SPEntityId=Italiano-Sample
 
 #The URL of the SAML 2.0 Assertion Consumer
 SAML2.AssertionConsumerURL=http://localhost:8080/italiano.com/home.jsp
