--- a/components/org.wso2.carbon.identity.cloud.listener.claim.onprem/pom.xml
+++ b/components/org.wso2.carbon.identity.cloud.listener.claim.onprem/pom.xml
@@ -75,6 +75,10 @@
             <groupId>com.googlecode.json-simple.wso2</groupId>
             <artifactId>json-simple</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
