--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,11 @@
                 <artifactId>json-simple</artifactId>
                 <version>${orbit.version.json-simple}</version>
             </dependency>
+            <dependency>
+                <groupId>net.minidev</groupId>
+                <artifactId>json-smart</artifactId>
+                <version>${json-smart.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -411,5 +416,6 @@
         <nimbusds.version>2.26.1.wso2v3</nimbusds.version>
         <orbit.version.json>2.0.0.wso2v1</orbit.version.json>
         <orbit.version.json-simple>1.1.wso2v1</orbit.version.json-simple>
+        <json-smart.version>1.3</json-smart.version>
     </properties>
 </project>
