--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,11 @@
                 <artifactId>json-smart</artifactId>
                 <version>${json-smart.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.org.owasp.encoder</groupId>
+                <artifactId>encoder</artifactId>
+                <version>${encoder.wso2.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -417,5 +422,6 @@
         <orbit.version.json>2.0.0.wso2v1</orbit.version.json>
         <orbit.version.json-simple>1.1.wso2v1</orbit.version.json-simple>
         <json-smart.version>1.3</json-smart.version>
+        <encoder.wso2.version>1.2.0.wso2v1</encoder.wso2.version>
     </properties>
 </project>
