Changed antiClickJacking to SAMEORIGIN.

--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -210,8 +210,9 @@
     {
         "name":"HttpHeaderSecurityFilter",
         "class":"org.apache.catalina.filters.HttpHeaderSecurityFilter",
-        "params" : [{"name" : "hstsEnabled", "value" : "false"}]
-    }
+        "params" : [{"name" : "hstsEnabled", "value" : "false"},
+                    {"name" : "antiClickJackingOption", "value" : "SAMEORIGIN"}]
+    },
   ],
   "filterMappings": [
     {
