Fixing - https://wso2.org/jira/browse/IDNCLOUD-151
Fixing mutual SSL does not work with hostname verification enabled issue

--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -205,7 +205,7 @@
   "filters": [
     {
       "name": "SessionFilter",
-      "class": "org.wso2.carbon.identity.cloud.web.jaggery.SessionFilter"
+      "class": "org.wso2.carbon.identity.cloud.web.jaggery.filters.SessionFilter"
     },
     {
         "name":"HttpHeaderSecurityFilter",
