--- a/components/org.wso2.carbon.identity.cloud.web.jaggery/pom.xml
+++ b/components/org.wso2.carbon.identity.cloud.web.jaggery/pom.xml
@@ -36,6 +36,16 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.base</artifactId>
+            <version>${carbon.kernel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${apache.httpcomponents.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -55,19 +65,20 @@
                         <Import-Package>
                             javax.servlet; version="${imp.pkg.version.javax.servlet}",
                             javax.servlet.http; version="${imp.pkg.version.javax.servlet}",
-
                             org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
                             org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
-
                             org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
+                            org.wso2.carbon.registry.core.*;version="${carbon.kernel.registry.imp.pkg.version.range}",
+                            org.wso2.carbon.utils; version="${carbon.kernel.package.import.version.range}",
                         </Import-Package>
                         <Private-Package>
-                            org.wso2.carbon.identity.cloud.web.jaggery.internal;
+                            org.wso2.carbon.identity.cloud.web.jaggery.internal,
                         </Private-Package>
                         <Export-Package>
                             !org.wso2.carbon.identity.cloud.web.jaggery.internal,
                             org.wso2.carbon.identity.cloud.web.jaggery.*;version="${identity.cloud.package.export.version}"
                         </Export-Package>
+                        <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
