--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -208,11 +208,23 @@
       "class": "org.wso2.carbon.identity.cloud.web.jaggery.filters.SessionFilter"
     },
     {
-        "name":"HttpHeaderSecurityFilter",
-        "class":"org.apache.catalina.filters.HttpHeaderSecurityFilter",
-        "params" : [{"name" : "hstsEnabled", "value" : "false"},
-                    {"name" : "antiClickJackingOption", "value" : "SAMEORIGIN"}]
+      "name": "HttpHeaderSecurityFilter",
+      "class": "org.apache.catalina.filters.HttpHeaderSecurityFilter",
+      "params": [
+        {
+          "name": "hstsEnabled",
+          "value": "false"
+        },
+        {
+          "name": "antiClickJackingOption",
+          "value": "SAMEORIGIN"
+        }
+      ]
     },
+    {
+      "name": "URLBasedCachePreventionFilter",
+      "class": "org.wso2.carbon.ui.filters.cache.URLBasedCachePreventionFilter"
+    }
   ],
   "filterMappings": [
     {
@@ -220,15 +232,19 @@
       "url": "/*"
     },
     {
-        "name":"HttpHeaderSecurityFilter",
-        "url":"*"
+      "name": "HttpHeaderSecurityFilter",
+      "url": "*"
+    },
+    {
+      "name": "URLBasedCachePreventionFilter",
+      "url": "*.jag"
     }
   ],
   "errorPages": {
-          "500": "/error/error500.html",
-          "401": "/error/error401.html",
-          "403": "/error/error403.html",
-          "404": "/error/error404.html"
-      },
+    "500": "/error/error500.html",
+    "401": "/error/error401.html",
+    "403": "/error/error403.html",
+    "404": "/error/error404.html"
+  },
   "logLevel": "info"
 }
