--- a/components/org.wso2.carbon.identity.cloud.listener.claim.onprem/pom.xml
+++ b/components/org.wso2.carbon.identity.cloud.listener.claim.onprem/pom.xml
@@ -99,20 +99,19 @@
                             org.wso2.carbon.identity.cloud.listener.claim.onprem.internal,
                         </Private-Package>
                         <Import-Package>
+                            org.wso2.carbon.user.core.service; version="${carbon.kernel.package.import.version.range}",
+                            org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.base; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.apache.commons.httpclient.methods; version="${commons-httpclient.wso2.osgi.version}",
+                            org.wso2.carbon.user.core.common; version="${carbon.kernel.package.import.version.range}",
+                            org.wso2.carbon.user.core.listener; version="${carbon.kernel.package.import.version.range}",
+                            org.wso2.carbon.user.core; version="${carbon.kernel.package.import.version.range}",
+                            org.apache.commons.httpclient; version="${commons-httpclient.wso2.osgi.version}",
+                            org.wso2.carbon.user.api; version="${carbon.user.api.imp.pkg.version.range}",
+                            org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
+                            org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
+                            org.json; version="${json.version.range}",
                         </Import-Package>
-                        org.apache.commons.logging; version="1.2.0",
-                        org.wso2.carbon.user.core.service; version="4.4.9",
-                        org.wso2.carbon.registry.core.service; version="1.0.1",
-                        org.osgi.service.component; version="1.2.0",
-                        org.wso2.carbon.user.core.common; version="4.4.9",
-                        org.wso2.carbon.user.core; version="4.4.9",
-                        org.wso2.carbon.identity.base; version="5.2.2",
-                        org.json; version="3.0.0.wso2v1",
-                        org.wso2.carbon.user.api; version="1.0.1",
-                        org.apache.commons.httpclient; version="3.1.0",
-                        org.apache.commons.httpclient.methods; version="3.1.0",
-                        org.wso2.carbon.user.core.listener; version="4.4.9",
-                        org.osgi.framework; version="1.7.0",
                         <Export-Package>
                             !org.wso2.carbon.identity.cloud.listener.claim.onprem.internal,
                             org.wso2.carbon.identity.cloud.listener.claim.onprem*;
