--- a/pom.xml
+++ b/pom.xml
@@ -399,6 +399,8 @@
         <imp.pkg.version.javax.servlet>[2.6.0, 3.0.0)</imp.pkg.version.javax.servlet>
         <commons-logging.osgi.version.range>[1.2,2.0)</commons-logging.osgi.version.range>
         <commons-lang.wso2.osgi.version.range>[2.6.0,3.0.0)</commons-lang.wso2.osgi.version.range>
+        <commons-httpclient.wso2.osgi.version>[3.1.0,4.0.0)</commons-httpclient.wso2.osgi.version>
+        <json.version.range>[4.4.0,5.0.0)</json.version.range>
 
         <sevlet.api.version>2.5</sevlet.api.version>
         <axiom.version>1.2.11-wso2v6</axiom.version>
