Add url for get connections

--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -98,6 +98,10 @@
       "path": "/directories/get-directory-list.jag"
     },
     {
+          "url": "/directories/get-connections",
+          "path": "/directories/get-connections.jag"
+    },
+    {
       "url": "/directories/get-directory",
       "path": "/directories/get-directory.jag"
     },
