Add update-accesstoken.jag path

--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -94,6 +94,10 @@
       "path": "/directories/update_finish.jag"
     },
     {
+          "url": "/directories/update_access_token_finish",
+          "path": "/directories/update-accesstoken.jag"
+    },
+    {
       "url": "/directories/get-directory-list",
       "path": "/directories/get-directory-list.jag"
     },
