Add path to get access token

--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -106,6 +106,10 @@
           "path": "/directories/get-connections.jag"
     },
     {
+              "url": "/directories/get_token_finish",
+              "path": "/directories/get-accesstoken.jag"
+    },
+    {
       "url": "/directories/get-directory",
       "path": "/directories/get-directory.jag"
     },
