Add federated authenticator for user portal and apps

--- a/jaggeryapps/admin/authentication/application-auth-config.json
+++ b/jaggeryapps/admin/authentication/application-auth-config.json
@@ -1,7 +1,6 @@
 {
   "authenticator": {
-    "authenticatorName": "BasicIdentityCloudAuthenticator",
-    "authenticatorDisplayName": "BasicIdentityCloudAuth",
-    "authenticationType": "local"
+    "authenticationType": "federated",
+    "identityProviderName": "SHARED_CloudAuthenticator"
   }
 }
