Integrate outbound feature for get all claim attributes

--- a/components/org.wso2.carbon.identity.cloud.listener.claim.onprem/pom.xml
+++ b/components/org.wso2.carbon.identity.cloud.listener.claim.onprem/pom.xml
@@ -69,6 +69,18 @@
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.userstore.onprem</groupId>
+            <artifactId>org.wso2.carbon.identity.user.store.common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
