Fixing logout for samples and Show logout property in admin portal

--- a/samples/webapps/cafelebens/src/main/resources/cafelebens.properties
+++ b/samples/webapps/cafelebens/src/main/resources/cafelebens.properties
@@ -48,7 +48,7 @@ SAML2.IdPURL=https://localhost:9443/identity
 #SAML2.AttributeConsumingServiceIndex=1701087467
 
 #Specify if SingleLogout is enabled/disabled
-SAML2.EnableSLO=false
+SAML2.EnableSLO=true
 
 #This is the URL that is used for SLO
 SAML2.SLOURL=logout
