--- a/jaggeryapps/admin/authentication/auth_config.json
+++ b/jaggeryapps/admin/authentication/auth_config.json
@@ -16,13 +16,13 @@
 		
 	},
 	"backChannelAuth" : {
-		"enabled" : true,
+		"enabled" : false,
 		"issuer" : "wso2.my.dashboard",
-		"tokenEP" : "https://identity.cloudlocal.wso2.com:9443/oauth2/token",
+		"tokenEP" : "https://localhost:9443/oauth2/token",
 		"clientKey" : "PxYmE2A4ceOESp2Kx8KqFscXwDoa",
 		"clientSecret": "syT5kJ5Lx3dAzQfFhkKfwMb8z3wa",
 		"jwtAuthenticatorEP" : "https://localhost:9443/services/LoggedUserInfoAdmin",
-		"returnToURL": "https://cloudmgt.cloudlocal.wso2.com:9444/cloudmgt",
-		"samlSSOURL" : "https://identity.cloudlocal.wso2.com:9443/samlsso"
+		"returnToURL": "https://localhost:9444/cloudmgt",
+		"samlSSOURL" : "https://localhost:9443/samlsso"
 	}
 }
